<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/registrypage"
    tools:context="com.example.microsoftsurface.myapplication.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="300dp"
        android:alpha="1.3"
        android:layout_height="430dp"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="40dp"
        android:background="@drawable/logintheme"
        tools:context="com.example.microsoftsurface.myapplication.MainActivity">

        <ImageView
            android:layout_marginLeft="55dp"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/two"/>

        <TextView
            android:layout_marginLeft="25dp"
            android:layout_width="250dp"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/white"/>

        <EditText
            android:id="@+id/Firstname"
            android:drawableLeft="@mipmap/name"
            android:hint="@string/FName"
            android:textColor="#000000"
            android:textSize="10dp"
            android:drawablePadding="10dp"
            android:paddingLeft="10dp"
            android:textColorHint="#66000000"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:alpha="0.5"
            android:layout_width="250dp"
            android:layout_height="35dp"
            android:background="@drawable/button"/>

        <EditText
            android:id="@+id/Lastname"
            android:drawableLeft="@mipmap/name"
            android:hint="@string/LName"
            android:textColor="#000000"
            android:textSize="10dp"
            android:drawablePadding="10dp"
            android:paddingLeft="10dp"
            android:textColorHint="#66000000"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:alpha="0.5"
            android:layout_width="250dp"
            android:layout_height="35dp"
            android:background="@drawable/button"/>

        <EditText
            android:id="@+id/Email"
            android:drawableLeft="@mipmap/email1"
            android:hint="@string/Email"
            android:textColor="#000000"
            android:textSize="10dp"
            android:drawablePadding="10dp"
            android:paddingLeft="10dp"
            android:textColorHint="#66000000"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:alpha="0.5"
            android:layout_width="250dp"
            android:layout_height="35dp"
            android:background="@drawable/button"/>

        <EditText
            android:id="@+id/Password"
            android:drawableLeft="@mipmap/password"
            android:hint="@string/Pass"
            android:textColor="#000000"
            android:textSize="10dp"
            android:inputType="textWebPassword"
            android:drawablePadding="10dp"
            android:paddingLeft="10dp"
            android:textColorHint="#66000000"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:alpha="0.5"
            android:layout_width="250dp"
            android:layout_height="35dp"
            android:background="@drawable/button"/>

        <EditText
            android:id="@+id/Age"
            android:drawableLeft="@mipmap/cpassword"
            android:hint="@string/age"
            android:textColor="#000000"
            android:inputType="number"
            android:textSize="10dp"
            android:drawablePadding="10dp"
            android:paddingLeft="10dp"
            android:textColorHint="#66000000"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:alpha="0.5"
            android:layout_width="250dp"
            android:layout_height="35dp"
            android:background="@drawable/button"/>
        <CheckBox
            android:layout_marginLeft="45dp"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Iagree"/>
        <Button
            android:id="@+id/signn1"
            android:layout_marginLeft="48dp"
            android:layout_width="200dp"
            android:text="@string/Signin"
            android:textColor="#FCFCFC"
            android:background="@drawable/login"
            android:alpha="0.9"
            android:layout_height="40dp" />

       </LinearLayout>
    </LinearLayout>
