<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/logintheme1"
    tools:context="com.example.microsoftsurface.myapplication.MainActivity">


<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:alpha="1.3"
    android:layout_height="350dp"
    android:layout_marginTop="80dp"
    android:layout_marginLeft="50dp"
    android:background="@drawable/logintheme"
    tools:context="com.example.microsoftsurface.myapplication.MainActivity">


    <ImageView
        android:layout_marginLeft="55dp"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/one"/>

    <TextView
        android:layout_marginLeft="25dp"
        android:layout_width="250dp"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/white"/>

    <EditText
        android:id="@+id/Email1"
        android:drawableLeft="@mipmap/email1"
        android:hint="@string/Email"
        android:textColor="#000000"
        android:textSize="10dp"
        android:inputType="textEmailAddress"
        android:drawablePadding="10dp"
        android:paddingLeft="10dp"
        android:textColorHint="#66000000"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:alpha="0.5"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:background="@drawable/button"/>
    <EditText
        android:id="@+id/Password1"
        android:drawableLeft="@mipmap/password"
        android:hint="@string/Pass"
        android:textColor="#000000"
        android:textSize="10dp"
        android:inputType="textWebPassword"
        android:drawablePadding="10dp"
        android:paddingLeft="10dp"
        android:textColorHint="#66000000"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:alpha="0.5"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:background="@drawable/button"/>

    <EditText
        android:drawableLeft="@mipmap/mobile"
        android:hint="@string/Mobile"
        android:textColor="#000000"
        android:textSize="10dp"
        android:inputType="number"
        android:drawablePadding="10dp"
        android:paddingLeft="10dp"
        android:textColorHint="#66000000"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:alpha="0.5"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:background="@drawable/button"/>

    <Button
        android:id="@+id/signin"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="48dp"
        android:layout_width="200dp"
        android:text="@string/Signin"
        android:textColor="#008B45"
        android:background="@drawable/signin"
        android:alpha="0.9"
        android:layout_height="40dp" />

    <Button
        android:id="@+id/signup"
        android:layout_marginLeft="98dp"
        android:layout_marginTop="10dp"
        android:layout_width="100dp"
        android:text="@string/Signup"
        android:textColor="#8B2500"
        android:background="@drawable/signup"
        android:alpha="0.9"
        android:layout_height="30dp" />
</LinearLayout>

</LinearLayout>
