<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcomepage"
    tools:context="com.example.microsoftsurface.myapplication.MainActivity">


    <LinearLayout
        android:orientation="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="350dp"
        android:alpha="1.3"
        android:layout_height="350dp"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="20dp"
        android:background="@drawable/logintheme"
        tools:context="com.example.microsoftsurface.myapplication.MainActivity">
        <ImageView
            android:layout_marginLeft="80dp"
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/three"/>

        <TextView
            android:layout_marginLeft="50dp"
            android:layout_width="250dp"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/white"/>

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:text="@string/Yourname"/>

        <TextView
            android:id="@+id/Yname"
            android:textColor="#000000"
            android:textSize="10dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="5dp"
            android:textAlignment="center"
            android:alpha="0.5"
            android:paddingTop="7dp"
            android:layout_width="250dp"
            android:layout_height="35dp"
            android:background="@drawable/button"/>

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:text="@string/Youremail"/>

        <TextView
            android:id="@+id/Yemail"
            android:textColor="#000000"
            android:textAlignment="center"
            android:paddingTop="7dp"
            android:textSize="10dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="5dp"
            android:alpha="0.5"
            android:layout_width="250dp"
            android:layout_height="35dp"
            android:background="@drawable/button"/>

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:text="@string/Yourage"/>

        <TextView
            android:id="@+id/Yage"
            android:textColor="#000000"
            android:textAlignment="center"
            android:textSize="10dp"
            android:paddingTop="7dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="5dp"
            android:alpha="0.5"
            android:layout_width="250dp"
            android:layout_height="35dp"
            android:background="@drawable/button"/>




    </LinearLayout>

</LinearLayout>
